Bug #20015 mgmsrv and mgmapi: get statport is dead code
Submitted: 23 May 2006 4:26 Modified: 23 May 2006 15:25
Reporter: Stewart Smith Email Updates:
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1.11 OS:
Assigned to: Stewart Smith Target Version:

[23 May 2006 4:26] Stewart Smith
Description:
get statport

protocol, mgmapi (internal only) and server part is obsolete. Does nothing. Should be
removed (Jonas agreed in mail from Jan 14th 2006)

How to repeat:
see code

Suggested fix:
remove
[23 May 2006 4:35] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/6745
[23 May 2006 6:04] Stewart Smith
Jonas approved, pushed to 5.1.12.

Don't know if we need to document this one - removal of mgmapi function in INTERNAL
section (of the doxygen #def). Jon?
[23 May 2006 15:25] Jon Stephens
The DOXYGEN_SHOULD_SKIP_INTERNAL stuff wasn't being included in the old-style NDBAPI doc
as generated from the server sources, and isn't being mentioned at all in the new DocBook
XML based version, so nothing should be changed for API users by the removal of this code.