BUG#20015 mgmsrv and mgmapi: get statport is dead code

Remove unused and obsolete mgmapi functionality (that did nothing anyway).